@@ -1,5 +1,6 @@
 2009-06-01  Satoshi Konno <skonno@cybergarage.org>
 	* Added cg_dictionary_*();
+	* Added cg_net_uri_getquerydictionary().
 	
 2009-05-28  Satoshi Konno <skonno@cybergarage.org>
 	* Changed cg_upnp_device_stop() not to send a byebye message when the device isn't running.
